# sample-fmu

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.cmd  build.sh  modelDescription.xml
sources/: fmu.c
test/: CMakeLists.txt  README.md  run_tests.sh  test_fmu.c
